JumpScript/tests/baselines/reference/unusedVariablesinForLoop.errors.txt
tests/cases/compiler/unusedVariablesinForLoop.jump(2,13): error TS6133: 'i' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinForLoop.jump (1 errors) ====
    function f1 () {
        for(var i = 0; ;) {
                ~
!!! error TS6133: 'i' is declared but its value is never read.
    
        }
    }